--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,13 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery {
+  display: flex;
+  gap: 50px;
+}
+
+.img-gallery {
+  display: block;
+  width: 450px;
+}
